crates/plene-core/tests/snapshots/snapshots__highlights@parse_error.rs.snap
---
source: crates/plene-core/tests/snapshots.rs
expression: render_highlights(&source)
input_file: crates/plene-core/tests/fixtures/parse_error.rs
---
  1 | fn:Keyword broken:Function (:Punctuation x:Identifier ::Punctuation &:Operator mut:Keyword {:Punctuation
  2 | let:Keyword y:Identifier =:Operator x:Identifier ?:Operator
  3 | let:Keyword z:Identifier =:Operator │:Plain ;:Punctuation
  4 | struct:Keyword
  5 | }:Punctuation
